🐛 app: hidden scrollbar & fixed progress bar doesn't end sometimes

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -7,6 +7,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* hide scrollbar */
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 /* Tippy.js styles */
 
 .tippy-box[data-theme~='primary']  {
